# wirerust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  STATE.md  deny.toml  maintenance-config.yaml  policies.yaml  reference-manifest.yaml  release-config.yaml  spec-changelog.md  tech-debt-register.md
.github/: dependabot.yml
benches/: pipeline.rs
code-delivery/: pr-301-updated-body.md
convergence/: STORY-112-step45.md  STORY-113-step45.md  STORY-114-step45.md  STORY-115-step45.md
feature/: wave-schedule.md
feature-f1-delta-analysis/: enip-delta-analysis.md
fuzz/: Cargo.toml  seed_corpus.py
fuzz/fuzz_targets/: fuzz_decode_packet.rs  fuzz_dnp3_parse.rs  fuzz_enip_cip_parse.rs  fuzz_modbus_parse.rs  fuzz_pcapng_reader.rs  fuzz_tls_reassembly.rs
holdout-scenarios/: HS-001-pcap-link-type-gating.md  HS-002-pcap-zero-packet-and-error-surfaces.md  HS-003-ethernet-ipv4-ipv6-decode-paths.md  HS-004-linux-sll-icmp-non-ip-rejection.md  HS-005-protocol-hint-and-packet-len-semantics.md  HS-006-finding-display-format-and-verdict-tokens.md  HS-007-json-serialization-skip-none-fields.md  HS-008-mitre-tactic-display-and-kill-chain-order.md  HS-009-mitre-technique-lookup-unknown-ids.md  HS-010-flowkey-canonicalization-and-constructor.md  HS-011-dns-statistics-never-emit-findings.md  HS-012-non-tcp-filter-bytes-reassembled-accounting.md  HS-013-tcp-handshake-state-machine-and-direction-tagging.md  HS-014-mid-stream-join-partial-capture.md  HS-015-real-world-corpus-clean-pcap.md  HS-016-real-world-corpus-evasion-pcap.md  HS-017-cross-subsystem-e1-e7-finding-construction.md  HS-018-raw-data-contract-no-escape-in-json.md  HS-019-tcp-seq-wraparound-reassembly.md  HS-020-dns-and-tcp-parallel-wave4.md  HS-021-rst-fin-close-and-timeout-lifecycle.md  HS-022-decoder-malformed-packet-no-panic.md  HS-023-e1-e2-e6-e7-integration-summary.md  HS-024-finding-raw-data-e7-source-ip-dispatch.md  HS-025-ics-tactic-display-and-non-exhaustive.md  HS-026-ooo-delivery-ordering.md  HS-027-direction-tagging-accuracy.md  HS-028-flow-close-reasons.md  HS-029-sequence-wraparound.md  HS-030-retransmission-no-false-positive.md  HS-031-lru-eviction-protects-established.md  HS-032-tcp-evasion-detection.md  HS-033-small-segment-exemption.md  HS-034-depth-truncation-bounds.md  HS-035-out-of-window-rejection.md  HS-036-max-findings-cap.md  HS-037-finalize-idempotency.md  HS-038-content-first-beats-port.md  HS-039-classification-cache-stability.md  HS-040-unclassified-flows-counter.md  (+93 more)
maintenance/: dependency-audit-findings.md  dependency-audit.md  doc-drift-findings.md  doc-drift.md  holdout-freshness.md  pattern-consistency.md  pattern-findings.md  performance-baseline.md  performance.md  po-backlog-maint-2026-06-22.md  risk-assumption-monitoring.md  session-review-maint-2026-06-17.md  spec-coherence-findings.md  spec-coherence.md  sweep-report-2026-06-17.md  sweep-report-2026-06-22.md  tech-debt-check.md
phase-f1-delta-analysis/: affected-files.txt  arp-affected-files.txt  arp-analyzer-delta-analysis.md  delta-analysis.md  dnp3-delta-analysis.md  e17-arp-qinq-macsec-offset-delta-analysis.md  feature-protocol-coverage-affected-files.txt  feature-protocol-coverage-delta-analysis.md  feature-protocol-coverage-research.md  issue-259-finding-collapse-delta-analysis.md  issue-62-terminal-reporter-enum-modes-delta-analysis.md  mitre-arp-additional-detections.md  mitre-arp-research.md  pcapng-reader-support-delta-analysis.md  powerlink-ethertype-verification.md  story-119-grouped-mode-collapse-delta-analysis.md
phase-f2-spec-evolution/: STORY-109-resync-adjudication.md  adversarial-spec-delta-review.md  architecture-delta.md  dnp3-architecture-delta.md  dnp3-verification-delta.md  enip-architecture-delta.md  enip-f2-adversary-pass-1.md  enip-f2-adversary-pass-10.md  enip-f2-adversary-pass-11.md  enip-f2-adversary-pass-12.md  enip-f2-adversary-pass-13.md  enip-f2-adversary-pass-2.md  enip-f2-adversary-pass-3.md  enip-f2-adversary-pass-4.md  enip-f2-adversary-pass-5.md  enip-f2-adversary-pass-6.md  enip-f2-adversary-pass-7.md  enip-f2-adversary-pass-8.md  enip-f2-adversary-pass-9.md  enip-f2-consistency-audit-final.md  enip-f2-consistency-audit.md  enip-prd-delta.md  f2-fix-directives.md  feature-protocol-coverage-architecture-delta.md  issue-62-prd-delta.md  prd-delta.md  story-119-prd-delta.md  story-119-type-design.md  verification-delta.md
phase-f3-stories/: dependency-graph-extended.md  enip-f3-adversary-pass-1.md  enip-f3-adversary-pass-10.md  enip-f3-adversary-pass-12.md  enip-f3-adversary-pass-2.md  enip-f3-adversary-pass-3.md  enip-f3-adversary-pass-4.md  enip-f3-adversary-pass-5.md  enip-f3-adversary-pass-6.md  enip-f3-adversary-pass-7.md  enip-f3-adversary-pass-8.md  enip-f3-adversary-pass-9.md  enip-f3-consistency-audit.md
phase-f5-adversarial/: F-F5-001-unexpected-source-adjudication.md  F-F5-003-resync-accounting-adjudication.md  F-F5P1-001-vp027-adjudication.md  F-F5P1-003-O2-adjudication.md  adversarial-delta-review.md  arp-f2-convergence-trajectory.md  arp-f3-convergence-trajectory.md  (+5 more)
specs/: prd.md  (+3 more)
(+2023 files in other folders)
