[package]
name = "wirerust"
version = "0.1.0"
edition = "2024"
description = "Fast PCAP forensics and network triage CLI tool"
license = "MIT"

[dependencies]
httparse = "1"
clap = { version = "4", features = ["derive"] }
etherparse = "0.16"
pcap-file = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
owo-colors = "4"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
