[package]
name = "wirerust"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Fast PCAP forensics and network triage CLI tool"
license = "MIT"

[dependencies]
httparse = "1"
tls-parser = "0.12"
md-5 = "0.11"
clap = { version = "4", features = ["derive"] }
etherparse = "0.16"
pcap-file = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
owo-colors = "4"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"

[profile.release]
overflow-checks = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
