[package]
name = "wirerust-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pcap-file = "2"

[dependencies.wirerust]
path = ".."

# Cargo.toml for fuzz targets requires all fuzz targets to be declared here.
# cargo-fuzz will not discover them automatically without this section.
[[bin]]
name = "fuzz_decode_packet"
path = "fuzz_targets/fuzz_decode_packet.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_modbus_parse"
path = "fuzz_targets/fuzz_modbus_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dnp3_parse"
path = "fuzz_targets/fuzz_dnp3_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pcapng_reader"
path = "fuzz_targets/fuzz_pcapng_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_enip_cip_parse"
path = "fuzz_targets/fuzz_enip_cip_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tls_reassembly"
path = "fuzz_targets/fuzz_tls_reassembly.rs"
test = false
doc = false
bench = false
